--- a/SBD_Project/SBD_Project/Views/Cennik/Delete.cshtml
+++ b/SBD_Project/SBD_Project/Views/Cennik/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Usuwanie</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz usunąć ten wpis?</h3>
 <div>
     <h4>Cennik</h4>
     <hr />
