--- a/SBD_Project/SBD_Project/Views/Odbiors/Delete.cshtml
+++ b/SBD_Project/SBD_Project/Views/Odbiors/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Usuwanie</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz usunąć ten wpis?</h3>
 <div>
     <h4>Odbior</h4>
     <hr />
