--- a/SBD_Project/SBD_Project/Views/Shared/_Layout.cshtml
+++ b/SBD_Project/SBD_Project/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <p>
-                        <img src="~/IMG/pb_logo.jpg" style="align-content: flex-start" height="100" />
+                        <img src="~/IMG/pb_logo.png" style="align-content: flex-start" height="100" />
                     </p>
                 </div>
                 <div class="col-md-6" style="font-size: 18px; color: #7F7460;text-align: justify">
