--- a/SBD_Project/SBD_Project/Views/CreateNewPackage/Create.cshtml
+++ b/SBD_Project/SBD_Project/Views/CreateNewPackage/Create.cshtml
@@ -16,7 +16,9 @@
         <h4>Paczka</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.DisplayFor(model => model.ValidationSummary)
+        <font color="RED">
+            @Html.DisplayFor(model => model.ValidationSummary)
+        </font>
 
         <div class="container">
             <div class="panel-group" id="accordion">
